trunk/Archive2/d4/53a58567150ed8/output
main.cpp:8:13: error: static_cast from 'MyEnum *' to 'int *' is not allowed
  int* ip = static_cast<int*>(&me); // "invalid static_cast"
            ^~~~~~~~~~~~~~~~~~~~~~
1 error generated.
